--- a/Starbucks/app/src/main/AndroidManifest.xml
+++ b/Starbucks/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Starbucks"
         tools:targetApi="31">
         <activity
+            android:name=".DetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".InicioPrincipalActivity"
             android:exported="false" />
         <activity
