--- a/Starbucks/app/build.gradle
+++ b/Starbucks/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.27'
     implementation 'com.google.code.gson:gson:2.9.1'
 }
